# pileupy

./: 404.html  README.md  index.html  mkdocs.yml  pileuppy.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
advance/: index.html
docs/: advance.md  index.md  installation.md  usage.md
examples/: dataframe.py  interactive.py  simple.html  simple.py
installation/: index.html
search/: search_index.json
src/pileupy/: data.py  main.py
usage/: index.html
